# MyKernel

MyKernel - v0.1 Beta/: BUILD.md  README.md
MyKernel - v0.1 Beta/Documentation/: 02-architecture.md  04-packages.md  05-cli-commands.md  06-builder-mk_bmd.md  07-config.md  08-roadmap.md
MyKernel - v0.1 Beta/examples/hello-home-os/: manifest.json
MyKernel - v0.1 Beta/examples/hello-home-os/payload_src/: hello.txt
MyKernel - v0.1 Beta/examples/hello-work-os/: manifest.json
MyKernel - v0.1 Beta/examples/hello-work-os/payload_src/: hello.txt
MyKernel - v0.1 Beta/sandbox/smoke-test-os/: manifest.json
MyKernel - v0.1 Beta/src/mykernel/: __init__.py  manifest.py
MyKernel - v0.1 Beta/src/native/: CMakeLists.txt  crypto.cpp  isolation.cpp
MyKernel - v0.1 Beta/tools/mk_bmd/: __init__.py  builder.pyx
MyKernel. - v0.1 Beta/: UBUNTU_CONTAINER_BUILD_NOTE.md  config.json  mykernel.key
MyKernel. - v0.1 Beta/Documentation/: 01-overview.md  03-justmko-format.md  09-project-structure.md  README.md
MyKernel. - v0.1 Beta/examples/: hello-test-os.justmko
MyKernel. - v0.1 Beta/examples/hello-code-os/: manifest.json
MyKernel. - v0.1 Beta/examples/hello-test-os/: manifest.json
MyKernel. - v0.1 Beta/sandbox/: smoke-test-os.justmko
MyKernel. - v0.1 Beta/src/mykernel/: cli.py  config_reader.py  crypto.py  scheduler.py
MyKernel. - v0.1 Beta/src/native/: bindings.cpp  bindings_capi.cpp  crypto.hpp  isolation.hpp
MyKernel. - v0.1 Beta/tests/: conftest.py  test_core.py
MyKernel. - v0.1 Beta/tools/mk_bmd/: builder.c  setup.py
(+4 files in other folders)
